--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vuex": "^2.3.1"
   },
   "devDependencies": {
+    "@aquafadas/gulp-php-minify": "^0.3.1",
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
@@ -50,6 +51,10 @@
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
+    "gulp": "^3.9.1",
+    "gulp-ftp": "^1.1.0",
+    "gulp-sftp": "^0.1.5",
+    "gulp-util": "^3.0.8",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "node-sass": "^4.5.3",
